getting game to work in the console, ui to follow

--- a/client/app/features/rockPaperScissors/rockPaperScissors.scss
+++ b/client/app/features/rockPaperScissors/rockPaperScissors.scss
@@ -30,14 +30,10 @@ $color-paper: #eeece3; // sepia
     &:focus {
         border: 0.5rem solid $color-border;
     }
-}
-
-.selector-rock,
-.selector-paper,
-.selector-scissors {
     & svg {
         height: 25rem;
         width: 25rem;
+        pointer-events: none;
     }
 }
 
